--- a/_app/immutable/manifest.json
+++ b/_app/immutable/manifest.json
@@ -1,11 +1,11 @@
 {
   ".svelte-kit/runtime/client/start.js": {
-    "file": "start-8e89cde3.js",
+    "file": "start-8db1f10f.js",
     "src": ".svelte-kit/runtime/client/start.js",
     "isEntry": true,
     "imports": [
-      "_index-5ecf021d.js",
-      "_index-10ea0a0b.js",
+      "_index-8c0e4016.js",
+      "_index-c239ecf6.js",
       "_singletons-d1fb5791.js"
     ],
     "dynamicImports": [
@@ -21,94 +21,94 @@
     ]
   },
   "src/routes/__layout.svelte": {
-    "file": "pages/__layout.svelte-e0090b58.js",
+    "file": "pages/__layout.svelte-c5465100.js",
     "src": "src/routes/__layout.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_index-5ecf021d.js",
-      "_index-10ea0a0b.js",
-      "_siteConfig-cd65c973.js",
+      "_index-8c0e4016.js",
+      "_index-c239ecf6.js",
       "_singletons-d1fb5791.js",
-      "_stores-f6c54ed2.js"
+      "_siteConfig-cd65c973.js",
+      "_stores-386c3cb2.js"
     ],
     "css": [
-      "assets/pages/__layout.svelte-ba165a14.css"
+      "assets/pages/__layout.svelte-cd813667.css"
     ]
   },
   ".svelte-kit/runtime/components/error.svelte": {
-    "file": "error.svelte-8219a7a5.js",
+    "file": "error.svelte-699b9f2f.js",
     "src": ".svelte-kit/runtime/components/error.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_index-5ecf021d.js"
+      "_index-8c0e4016.js"
     ],
     "css": [
-      "assets/getViewCount-c00d2062.css"
+      "assets/pages/posts/index.svelte-26a28d0a.css"
     ]
   },
   "src/routes/posts/__error.svelte": {
-    "file": "pages/posts/__error.svelte-525cd557.js",
+    "file": "pages/posts/__error.svelte-d4198990.js",
     "src": "src/routes/posts/__error.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_index-5ecf021d.js"
+      "_index-8c0e4016.js"
     ],
     "css": [
-      "assets/getViewCount-c00d2062.css"
+      "assets/pages/posts/index.svelte-26a28d0a.css"
     ]
   },
   "src/routes/index.svelte": {
-    "file": "pages/index.svelte-d2f9d415.js",
+    "file": "pages/index.svelte-b6754686.js",
     "src": "src/routes/index.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_index-5ecf021d.js",
-      "_getViewCount-0a8aa47d.js",
+      "_index-8c0e4016.js",
+      "_getViewCount-ee31ff01.js",
       "_siteConfig-cd65c973.js"
     ],
     "css": [
-      "assets/pages/index.svelte-ad537dbd.css"
+      "assets/pages/index.svelte-432362ec.css"
     ]
   },
   "src/routes/posts/[slug].svelte": {
-    "file": "pages/posts/_slug_.svelte-247ff316.js",
+    "file": "pages/posts/_slug_.svelte-192a9992.js",
     "src": "src/routes/posts/[slug].svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_index-5ecf021d.js",
+      "_index-8c0e4016.js",
       "_siteConfig-cd65c973.js",
-      "_getViewCount-0a8aa47d.js",
-      "_stores-f6c54ed2.js",
-      "_index-10ea0a0b.js"
+      "_getViewCount-ee31ff01.js",
+      "_stores-386c3cb2.js",
+      "_index-c239ecf6.js"
     ],
     "css": [
       "assets/pages/posts/_slug_.svelte-79a51716.css"
     ]
   },
   "src/routes/posts/index.svelte": {
-    "file": "pages/posts/index.svelte-37d49d8d.js",
+    "file": "pages/posts/index.svelte-08b86e1e.js",
     "src": "src/routes/posts/index.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_index-5ecf021d.js"
+      "_index-8c0e4016.js"
     ],
     "css": [
-      "assets/getViewCount-c00d2062.css"
+      "assets/pages/posts/index.svelte-26a28d0a.css"
     ]
   },
-  "_index-5ecf021d.js": {
-    "file": "chunks/index-5ecf021d.js"
+  "_index-8c0e4016.js": {
+    "file": "chunks/index-8c0e4016.js"
   },
-  "_index-10ea0a0b.js": {
-    "file": "chunks/index-10ea0a0b.js",
+  "_index-c239ecf6.js": {
+    "file": "chunks/index-c239ecf6.js",
     "imports": [
-      "_index-5ecf021d.js"
+      "_index-8c0e4016.js"
     ]
   },
   "_singletons-d1fb5791.js": {
@@ -117,21 +117,21 @@
   "_siteConfig-cd65c973.js": {
     "file": "chunks/siteConfig-cd65c973.js"
   },
-  "_stores-f6c54ed2.js": {
-    "file": "chunks/stores-f6c54ed2.js",
+  "_stores-386c3cb2.js": {
+    "file": "chunks/stores-386c3cb2.js",
     "imports": [
-      "_index-10ea0a0b.js",
-      "_index-5ecf021d.js"
+      "_index-c239ecf6.js",
+      "_index-8c0e4016.js"
     ]
   },
-  "_getViewCount-0a8aa47d.js": {
-    "file": "chunks/getViewCount-0a8aa47d.js",
+  "_getViewCount-ee31ff01.js": {
+    "file": "chunks/getViewCount-ee31ff01.js",
     "imports": [
-      "_index-5ecf021d.js",
+      "_index-8c0e4016.js",
       "_siteConfig-cd65c973.js"
     ],
     "css": [
-      "assets/getViewCount-c00d2062.css"
+      "assets/pages/posts/index.svelte-26a28d0a.css"
     ]
   }
 }
