--- a/_app/immutable/manifest.json
+++ b/_app/immutable/manifest.json
@@ -1,6 +1,6 @@
 {
   ".svelte-kit/runtime/client/start.js": {
-    "file": "start-34cc97ba.js",
+    "file": "start-1bf8aa80.js",
     "src": ".svelte-kit/runtime/client/start.js",
     "isEntry": true,
     "imports": [
@@ -47,7 +47,7 @@
       "_index-8c0e4016.js"
     ],
     "css": [
-      "assets/pages/posts/index.svelte-26a28d0a.css"
+      "assets/error.svelte-91aebcd4.css"
     ]
   },
   "src/routes/posts/__error.svelte": {
@@ -59,7 +59,7 @@
       "_index-8c0e4016.js"
     ],
     "css": [
-      "assets/pages/posts/index.svelte-26a28d0a.css"
+      "assets/error.svelte-91aebcd4.css"
     ]
   },
   "src/routes/404.svelte": {
@@ -76,7 +76,7 @@
     ]
   },
   "src/routes/index.svelte": {
-    "file": "pages/index.svelte-9ea47fab.js",
+    "file": "pages/index.svelte-a7be9eb2.js",
     "src": "src/routes/index.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
@@ -89,7 +89,7 @@
       "_singletons-d1fb5791.js"
     ],
     "css": [
-      "assets/pages/index.svelte-6a3b96cc.css"
+      "assets/pages/index.svelte-d70ea48b.css"
     ]
   },
   "src/routes/posts/[slug].svelte": {
@@ -117,7 +117,7 @@
       "_index-8c0e4016.js"
     ],
     "css": [
-      "assets/pages/posts/index.svelte-26a28d0a.css"
+      "assets/error.svelte-91aebcd4.css"
     ]
   },
   "_index-8c0e4016.js": {
@@ -155,7 +155,7 @@
       "_siteConfig-cd65c973.js"
     ],
     "css": [
-      "assets/pages/posts/index.svelte-26a28d0a.css"
+      "assets/error.svelte-91aebcd4.css"
     ]
   }
 }
