--- a/.editorconfig
+++ b/.editorconfig
@@ -2,8 +2,13 @@ root = true
 
 [*]
 end_of_line = lf
-indent_style = tab
+indent_style = space
 indent_size = 2
 charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
+
+[*.md, *.yaml, *.yml]
+indent_style = space
+trim_trailing_whitespace = false
+
