feat: add mermaid and update about

--- a/package.json
+++ b/package.json
@@ -8,61 +8,63 @@
     "postbuild": "pagefind --site dist",
     "preview": "astro preview",
     "format": "prettier -w --cache . && prettier -w --cache **/*.astro",
-    "check": "astro check"
+    "check": "astro check",
+    "postinstall": "pnpx playwright-core install --with-deps chromium"
   },
   "dependencies": {
     "@astrojs/mdx": "2.0.0",
     "@astrojs/rss": "4.0.1",
     "@astrojs/sitemap": "3.0.3",
     "@astrojs/tailwind": "5.0.3",
-    "@fontsource/jetbrains-mono": "^5.0.18",
+    "@fontsource/jetbrains-mono": "^5.1.0",
     "@types/hast": "^3.0.4",
     "@types/mdast": "^4.0.4",
     "astro": "4.0.3",
-    "astro-embed": "^0.6.1",
+    "astro-embed": "^0.6.2",
     "astro-expressive-code": "^0.36.1",
     "astro-icon": "^0.8.2",
     "hastscript": "^9.0.0",
     "mdast-util-directive": "^3.0.0",
     "mdast-util-to-markdown": "^2.1.0",
     "rehype-external-links": "^3.0.0",
+    "rehype-mermaid": "^2.1.0",
     "remark-directive": "^3.0.0",
     "satori": "0.10.11",
     "satori-html": "^0.3.2",
-    "sharp": "^0.33.0",
+    "sharp": "^0.33.5",
     "unified": "^11.0.5",
     "unist-util-visit": "^5.0.0"
   },
   "devDependencies": {
-    "@astrojs/check": "^0.3.1",
-    "@pagefind/default-ui": "^1.0.4",
-    "@resvg/resvg-js": "^2.6.0",
+    "@astrojs/check": "^0.3.4",
+    "@pagefind/default-ui": "^1.1.1",
+    "@resvg/resvg-js": "^2.6.2",
     "@tailwindcss/aspect-ratio": "^0.4.2",
-    "@tailwindcss/typography": "^0.5.10",
-    "@types/eslint": "^8.44.8",
-    "@typescript-eslint/eslint-plugin": "^6.13.2",
-    "@typescript-eslint/parser": "^6.13.2",
-    "astro-eslint-parser": "^0.16.0",
-    "autoprefixer": "^10.4.16",
-    "eslint": "^8.55.0",
+    "@tailwindcss/typography": "^0.5.15",
+    "@types/eslint": "^8.56.12",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "astro-eslint-parser": "^0.16.3",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-import-resolver-typescript": "^3.6.3",
     "eslint-plugin-astro": "^0.30.0",
-    "eslint-plugin-import": "^2.29.0",
-    "eslint-plugin-jsx-a11y": "^6.8.0",
-    "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-import": "^2.30.0",
+    "eslint-plugin-jsx-a11y": "^6.10.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "mdast-util-to-string": "^4.0.0",
-    "pagefind": "^1.0.4",
-    "postcss": "^8.4.32",
-    "postcss-html": "^1.5.0",
+    "pagefind": "^1.1.1",
+    "postcss": "^8.4.45",
+    "postcss-html": "^1.7.0",
     "postcss-import": "^15.1.0",
-    "prettier": "^3.1.0",
+    "prettier": "^3.3.3",
     "prettier-plugin-astro": "0.12.2",
-    "prettier-plugin-tailwindcss": "^0.5.9",
+    "prettier-plugin-tailwindcss": "^0.5.14",
     "reading-time": "^1.5.0",
     "remark-unwrap-images": "^4.0.0",
-    "tailwindcss": "^3.3.6",
-    "typescript": "^5.3.3"
+    "tailwindcss": "^3.4.11",
+    "typescript": "^5.6.2"
   },
   "packageManager": "pnpm@8.6.1"
 }
